test/kubernetes/e2e/features/extproc/testdata/single-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: multi-rule-route
spec:
  parentRefs:
    - name: gw
  hostnames:
    - "www.example.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /myapp
        - headers:
            - name: x-test
              value: "true"
      backendRefs:
        - name: backend
          port: 3000
      filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.kgateway.dev
            kind: RoutePolicy
            name: single-rule-test
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: backend
          port: 3000
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: RoutePolicy
metadata:
  name: single-rule-test
spec:
  extProc:
    extensionRef:
      name: ext-proc-extension
    processingMode:
      requestHeaderMode: SEND
      responseHeaderMode: SEND
      requestBodyMode: NONE
      responseBodyMode: NONE
